@@ -1,0 +1,5 @@
+<p>Copyright &copy; CodeIgniter Framework, 2016</p>
+<br />
+<p>Designed by: 
+    <a href="https://github.com/StockExtremeBros/comp4711assignment1">Gabriella Cheung, Micah Willems and Tyler Trepanier.</a>.
+</p>
